# FEMvib

./: .Makefile.swp  .gitignore  ACKNOWLEDGMENTS.txt  AUTHORS.txt  INSTALL.txt  Makefile  README.md  README.txt  build.sh  femvib  femvib.C  femvib.cpp  femvib_clean.sh  femvib_ep-ex2  femvib_ep-ex2.C  femvib_ep-nD.C  femvib_run.sh  input  nohup.out  output  run.sh  run_common_.sh  tests_run.sh
.deps/: femvib.Tpo  femvib_ep-ex2.Po  femvib_ep-ex2.Tpo  femvib_sphr_ep-ex2.Tpo
.github/workflows/: tests.yml
.libs/: femvib  femvib_ep-ex2  femvib_sphr
examples/results_C6H6O2H2_2D_PBC/: A.m  B.m  C6H6O2H2_2D-rot.pot  eigenstate0.e  eigenstate0.txt  eigenstate1.e  eigenstate1.txt  eigenstate2.e  eigenstate2.txt  (+14 more)
include/: dataman.h  duplicates.h  duplicates_alc.h  helpf.h  imls2.h  interp_rbf_alc.h  jakobAssembly.h  mins_ndim.h  nr3.h  pointSelector2.h  pointSelector2_alc.h  roots_multidim.h
results_SHO_1D/: energyP
results_SHO_2D/: B.m  eigenvalues.txt  energyP  pot.out  soln_1.e
results_SHO_3D/: eigenvalues_3D.txt  energyP  matrixg.xx
src/: Makefile.am_buildup  configure.ac  femvib.cpp  gmat.cpp  transform.pl  tune.cpp
src/include/: eckart.h  geomswap.h  gmatUtility.h  imls.h  imls2_alc.h  imlsStruc.h  imls_alc.h  newFunc.h  nr3_alc.h
src/include/gmat/: eckart.h  gmatUtility.h  helpf.h  imls2.h  no_reference.h  testRot.h
src/include/tune/: parameter.h  pointSelector2.h
tools/: clean_make-ish.sh  es_parse.py  exodusii_parse.sh  extrpars.py  femvib_parse.csh  gmat  gmatN.pl  gnuplot_cmd  node_search.py  paramsearch.pl  results_clean.sh  tune  tune_run.sh
(+152 files in other folders)
